Stablize & speedup performance under low search thread count & removing extra code